@@ -15,7 +15,7 @@ rtorrent_rc = ~/.rtorrent.rc
 
 # The default output format for listing
 output_format = \  $(name)s {$(alias)s}
-                \    $(is_private)s $(is_open)s P$(prio)d  $(done)5.1f$(pc)s  R:$(ratio)6.2f  SZ:$(size.sz)s  U:$(up.sz)s/s  D:$(down.sz)s/s  $(message)s
+                \    $(is_private)s $(is_open)s $(is_active)s P$(prio)d  $(done)5.1f$(pc)s  R:$(ratio)6.2f  SZ:$(size.sz)s  U:$(up.sz)s/s  D:$(down.sz)s/s T:$(throttle)s  $(message)s
 
 # The default output format for actions
 action_format = $(action)8s $(name)s {$(alias)s}
